feat: Update cover letter and contact details for submission to Foundations of Physics, and create a submission archive.

--- a/physics/cover_letter.tex
+++ b/physics/cover_letter.tex
@@ -3,35 +3,32 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
 
-\signature{David Ahmann\\Independent Researcher\\Toronto, Canada}
-\address{David Ahmann\\Toronto, Canada\\Email: contact via journal}
+\signature{David Ahmann\\dahmann@lumyn.cc\\ORCID: 0009-0006-4066-8760\\Independent Researcher, Toronto, Canada}
+\address{David Ahmann\\Toronto, Canada\\dahmann@lumyn.cc}
 \date{\today}
 
 \begin{document}
 
-\begin{letter}{Editorial Office\\Classical and Quantum Gravity\\IOP Publishing}
+\begin{letter}{Editorial Office\\Foundations of Physics\\Springer Nature}
 
 \opening{Dear Editors,}
 
-I am pleased to submit the manuscript entitled ``\textbf{Coherence-Dependent Backreaction in Semiclassical and Analog Gravity: Testable Predictions from Informational Stress}'' for consideration as a Research Paper in \textit{Classical and Quantum Gravity}.
+I am pleased to submit the manuscript entitled ``\textbf{Coherence-Dependent Backreaction in Semiclassical and Analog Gravity: Testable Predictions from Informational Stress}'' for consideration in \textit{Foundations of Physics}.
 
-\textbf{Summary.} This paper derives a testable prediction for analog gravity experiments: coherent phonon injection near a sonic horizon in a Bose-Einstein condensate produces density modulations $\delta\rho/\rho_0 \sim 10^{-6}$, while thermal phonon injection of identical energy produces no such effect. This coherent-versus-thermal signature---measurable with current BEC technology---constitutes a qualitative test absent in competing frameworks (Penrose-Di\'{o}si, stochastic gravity).
+\textbf{Context and Importance.} The relationship between quantum coherence and spacetime geometry remains one of the most challenging open problems in theoretical physics. While semiclassical gravity treats quantum matter as a source for classical geometry, it does not distinguish between coherent and incoherent quantum states of identical energy density. This paper addresses that gap by deriving an \emph{informational stress tensor} from a variational principle based on relative entropy.
 
-\textbf{Key contributions:}
+\textbf{Primary Contribution.} The key result is a concrete, falsifiable prediction for analog gravity experiments in Bose-Einstein condensates: coherent phonon injection near a sonic horizon produces density modulations $\delta\rho/\rho_0 \sim 10^{-6}$, while thermal phonon injection of identical energy produces no such effect. This coherent-versus-thermal signature is:
 \begin{itemize}
-    \item Explicit derivation of an informational stress tensor $\Theta_{\mu\nu}$ for Schwarzschild, FRW, Rindler, and acoustic geometries via variation of a coherence functional.
-    \item Two independent derivations of the coupling constant $\kappa$ (holographic and entropic).
-    \item Demonstration that analog gravity systems provide 62 orders of magnitude enhancement in effective coupling, bringing predictions within experimental reach.
-    \item Concrete experimental protocol with falsification criteria: a null result at $\delta\rho/\rho_0 < 10^{-7}$ would falsify the acoustic implementation.
+    \item Measurable with current BEC technology at laboratories such as MIT, JILA, and MPQ;
+    \item Absent in competing frameworks (Penrose-Di\'{o}si gravitational collapse, stochastic gravity);
+    \item Accompanied by a clear falsification criterion: a null result at $\delta\rho/\rho_0 < 10^{-7}$ would rule out the acoustic implementation.
 \end{itemize}
 
-\textbf{Relevance to CQG.} The manuscript addresses the interface between quantum information and spacetime geometry---a central topic for your readership. The framework extends semiclassical gravity by incorporating relative entropy as a dynamical player, while remaining consistent with established limits. The emphasis on falsifiable predictions and experimental feasibility aligns with CQG's interest in connecting theory to observation.
+\textbf{Why Foundations of Physics?} This manuscript proposes a new physical principle---that quantum coherence relative to geometry-adapted reference states generates measurable stress-energy---and develops it through rigorous derivation while maintaining focus on experimental testability. This combination of foundational inquiry with concrete predictions aligns well with the journal's scope of addressing fundamental questions through both theoretical and empirical lenses.
 
-\textbf{Novelty.} The key distinguishing feature is the prediction that coherent and thermal quantum states of identical energy produce different gravitational responses. This signature is absent in standard semiclassical gravity, Penrose-Di\'{o}si models, and stochastic gravity, providing a clear experimental discriminant.
+The manuscript includes explicit derivations for multiple geometries (Rindler, acoustic, Schwarzschild, FRW), two independent derivations of the coupling constant, and a first-principles derivation of the decoherence generator from Unruh-DeWitt detector dynamics.
 
-This manuscript has not been published elsewhere and is not under consideration by another journal. All work is original and properly cited.
-
-I believe this work will be of significant interest to the CQG community, particularly researchers working on analog gravity, quantum fields in curved spacetime, and experimental tests of semiclassical gravity.
+\textbf{Declarations.} This manuscript has not been published elsewhere and is not under consideration by another journal. All work is original. The author has no competing interests to declare. AI tools (Claude/Anthropic, GPT-4/OpenAI) were used for copy editing and literature synthesis; all scientific content is the author's own.
 
 Thank you for considering this submission.
 
