--- a/alfm_bem/alfm_bem_refs.bib
+++ b/alfm_bem/alfm_bem_refs.bib
@@ -246,3 +246,21 @@
   year={2020},
   url={https://arxiv.org/abs/2010.03759}
 }
+
+% Datasets and Models
+@inproceedings{Lang1995,
+  title={Newsweeder: Learning to filter netnews},
+  author={Lang, Ken},
+  booktitle={Proceedings of the 12th International Conference on Machine Learning},
+  pages={331--339},
+  year={1995}
+}
+
+@inproceedings{Reimers2019,
+  title={Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks},
+  author={Reimers, Nils and Gurevych, Iryna},
+  booktitle={Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)},
+  pages={3982--3992},
+  year={2019},
+  url={https://arxiv.org/abs/1908.10084}
+}
