--- a/physics/coherism.tex
+++ b/physics/coherism.tex
@@ -1388,6 +1388,13 @@ For $\alpha_{\mathrm{eff}} = 10^{-11}$ (representing Planck-suppressed coupling 
 \end{equation}
 consistent with observational bounds on dark energy variations.
 
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.9\columnwidth]{coherism_frw_results.png}
+    \caption{\textbf{Coherism FRW Simulation.} Evolution of coherence density $\rho_{\mathrm{coh}}$ and equation of state $w_{\mathrm{coh}}$ in a coupled cosmology. The coherence density grows during inflation ($w_{\mathrm{coh}} \approx -1$) and decays thereafter ($w_{\mathrm{coh}} \to 0$), leaving a small remnant density $\rho_{\mathrm{coh}}/\rho_{\mathrm{tot}} \sim 10^{-10}$ today.}
+    \label{fig:frw-results}
+\end{figure}
+
 % ----------------------------------------------------------------------
 \section{Analog Gravity Predictions}
 \label{appendix:analog}
