--- a/alfm_bem/cover_letter.tex
+++ b/alfm_bem/cover_letter.tex
@@ -14,33 +14,33 @@
 
 I am pleased to submit the manuscript entitled ``ALFM-BEM: Bidirectional Experience Memory for Continuous Learning in Foundation Model Deployments'' for consideration as a publication in the Journal of Machine Learning Research.
 
-\section*{Summary}
+\noindent\textbf{Summary}
 
 Foundation models are typically deployed as frozen artifacts, creating a fundamental gap: they cannot learn from their deployment experiences. This paper introduces ALFM-BEM, a unified wrapper architecture that enables continuous learning without modifying backbone weights. Key contributions include:
 \begin{itemize}
-    \item \textbf{Bidirectional Experience Memory (BEM)}: A unified memory architecture where experiences exist on a continuous outcome spectrum, providing risk signals, success patterns, and out-of-distribution detection as emergent properties of a single structure.
-    \item \textbf{Consensus Engine with Query Action}: An extension to selective prediction that transforms passive abstention into active learning.
+    \item \textbf{Bidirectional Experience Memory (BEM)}: A unified memory architecture where experiences exist on a continuous outcome spectrum, providing risk signals, success patterns, and out-of-distribution detection as emergent properties.
+    \item \textbf{Consensus Engine with Query Action}: An extension to selective prediction that transforms passive abstention into active learning, validated to improve accuracy by \textbf{6.2\%} in ambiguous zones.
     \item \textbf{Bounded Adapters}: Continuous improvement with provable stability guarantees (Proposition 4.4).
-    \item \textbf{Empirical Validation}: Experiments demonstrate effective failure retrieval (F1 $\approx$ 0.59), strong OOD detection (AUC $>$ 0.99 for clustered patterns), and unique success pattern retrieval (rate $\approx$ 0.70) that baselines cannot provide.
+    \item \textbf{Empirical Validation}: Experiments on both synthetic data and real-world 20Newsgroups text embeddings demonstrate that BEM significantly improves failure retrieval (Precision \textbf{0.95} vs 0.73 for raw embeddings) and uniquely provides success pattern guidance that RAG baselines cannot offer.
 \end{itemize}
 
-\section*{Previous Publications}
+\noindent\textbf{Previous Publications}
 
 This manuscript has not been published previously at any workshop or conference. This is an original submission.
 
-\section*{Co-Author Consent}
+\noindent\textbf{Co-Author Consent}
 
 I am the sole author of this manuscript and consent to its review by JMLR.
 
-\section*{Conflicts of Interest}
+\noindent\textbf{Conflicts of Interest}
 
 I declare no conflicts of interest with any JMLR action editors or reviewers. I have no financial relationships with entities that could be perceived to influence this work.
 
-\section*{Funding Disclosure}
+\noindent\textbf{Funding Disclosure}
 
 This research was conducted independently without external funding. No grants, stipends, donations, or third-party support were received for any aspect of this work, including data collection, computing resources, or development.
 
-\section*{Suggested Action Editors}
+\noindent\textbf{Suggested Action Editors}
 
 Based on expertise in memory-augmented neural networks, continual learning, and foundation model deployment:
 \begin{enumerate}
@@ -51,7 +51,7 @@ Based on expertise in memory-augmented neural networks, continual learning, and 
     \item \textbf{Zachary Lipton} -- Expertise in deployment and calibration
 \end{enumerate}
 
-\section*{Suggested Reviewers}
+\noindent\textbf{Suggested Reviewers}
 
 \begin{enumerate}
     \item \textbf{Yonatan Geifman} (Technion) -- Expert on selective prediction
@@ -61,11 +61,11 @@ Based on expertise in memory-augmented neural networks, continual learning, and 
     \item \textbf{Charles Packer} (UC Berkeley) -- Expert on memory systems for LLMs (MemGPT)
 \end{enumerate}
 
-\section*{Keywords}
+\noindent\textbf{Keywords}
 
 Continual learning, experience memory, out-of-distribution detection, foundation models, selective prediction, bounded adapters, retrieval-augmented systems
 
-\section*{Paper Length Justification}
+\noindent\textbf{Paper Length Justification}
 
 The manuscript is approximately 15 pages (main text) plus appendices, well within JMLR guidelines.
 
